--- a/src/pages/posts.mdx
+++ b/src/pages/posts.mdx
@@ -1,11 +1,11 @@
 ---
-navigationLabel: Posts
+navigationLabel: Expériences professionnelles
 ---
 import {format} from 'date-fns'
 import { mix } from '@theme-ui/color'
 import Footer from '../components/footer';
 
-# Posts
+# Expériences professionnelles 
 
 <SourceList filter='posts'>
   {posts => (
@@ -57,7 +57,7 @@ import Footer from '../components/footer';
                     </Badge>
                   )
                 })}
-                <Text sx={{textDecoration: 'underline'}}>View post</Text>
+                <Text sx={{textDecoration: 'underline'}}>Plus de détails</Text>
               </Card>
             </Link>
           </Box>
