--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -1,11 +1,11 @@
 ---
-navigationLabel: Projects
+navigationLabel: Projets académiques
 ---
 import {format} from 'date-fns'
 import { mix } from '@theme-ui/color'
 import Footer from '../components/footer';
 
-# Projects
+# Projets académiques
 
 <SourceList filter='projects'>
   {projects => (
@@ -57,7 +57,7 @@ import Footer from '../components/footer';
                     </Badge>
                   )
                 })}
-                <Text sx={{textDecoration: 'underline'}}>View project</Text>
+                <Text sx={{textDecoration: 'underline'}}>Plus de détails</Text>
               </Card>
             </Link>
           </Box>
