--- a/src/projects/gadget-cms.mdx
+++ b/src/projects/gadget-cms.mdx
@@ -1,22 +1,14 @@
 ---
-title: GadgetCMS
-tags: ['.NET Core','SQL Server','Azure']
+title: Projet fin de deuxième année S4 (projet mobile)
+tags: ['Android','Java','XML','firebase']
 date: 2019-05-11
 ---
 
-“GadgetCMS” is a content management system that can provide & manage content related to electronic products. It provides users the ability to read a review & specifications of a gadget. Users who create an account on the website are given an ability to post their own opinion about a product and rate it. 
+### Sujet
 
-Users  given the  role of “Editor” will be able to create content about a gadget  and post a review on them. Further, users with role of “Moderator” and “Admin” will have the ability to manage the administrative capabilities of the site.
+Conception et réalisation d’une application ANDROID de réservation des taxis
 
-My aim is to build a server-side Content Management system specifically tailored to managing content related to Electronic products such as smartphones, smart-watches, etc. It is built upon the modern ASP.NET Core framework based on Razor page model. The system is called “GadgetCMS” which falls under “Web Content Management (WCM)” system. 
+### Problématique
 
-A Digital Asset Management System (DAM) is used to provide content for a website through integration with WCM. The system provides core control functionality such as:
-- Permissions
-- Content State Management and workflow
-- Dependency Management
-- Search and Organization of Content
-- Content Reuse
-- Proper management of uploaded resources
-- Advanced Search Capabilities
-- Comparison of specifications of similar products
-- Ability of user to give an opinion on a product
+
+
