--- a/src/projects/onion-rooting.mdx
+++ b/src/projects/onion-rooting.mdx
@@ -1,16 +1,26 @@
 ---
-title: The Onion Rooting
-tags: ['React.js','Solidity','Bootstrap']
-date: 2019-12-21
+title:  Projet de fin de 1ére année
+tags: [' ANDROID',' C (programmation réseau)','JAVA','XML']
+date: 2018-06-03
 ---
 
-### The problem
-"Vegetable prices have surged by 33% in 2019", "After onions, potato prices jump 75% in Delhi", "60,000 suicides of farmers in Maharashtra as of 2014". There is a smokescreen here that lies over here. Middlemen keep crops in deep freezers and release them at a high rate when demand rises. We eradicate this problem with the help of a Blockchain network and an all transparent transaction that can be monitored and stop illegal storages of vegetables/crops. Our Web-App will help farmers sell crops at decent rates and will be a platform for them as well as Middlemen to buy/sell crops and can be regulated with the help of the government.
+## sujet
 
-### Challenges faced
-The main challenge was learning Blockchain. We were extremely new to the whole Blockchain ecosystem and Ethereum network. We had a lot of issues building the smart contracts and business logic as well as understanding the working of Ethereum and smart contract system. In order to solve this problem, we contacted Matic Team and we were constantly in touch with them and they helped us a lot in solving our doubts. We spent around 10 hours on design thinking and understanding Blockchain ecosystem. This resulted in time constraints and it was challenging to complete our idea in the rest of the time. But somehow we were able to overcome it and we completed almost all the features.
+Conception et réalisation de deux applications de gestion des tests, en C (application réseau) et en ANDROID
 
-### Partners
-- Ayush Bherwani
-- Harsh Mehta
-- Priyank Shah
+## Problématique
+
+Afin de permettre aux étudiants de développer leurs connaissances, le projet de fin d’année est l’occasion idéale de mettre en pratique tout ce qui a été assimilé au cours de l’année et de découvrir de nouvelles notions. 
+ 
+Mon travail consiste à faciliter le passage des tests ou d’examens pour un professeur et pour ses élèves. En effet, pour aboutir à une solution il sera plus rentable d’informatiser la relation entre le professeur et ses élèves durant les tests. 
+ 
+Ainsi, mon travail est de réaliser une application qui permet au professeur de déposer un test contenant plusieurs questions, et de permettre par la suite aux étudiants de se connecter afin de passer le test. 
+ 
+## Objectif du projet
+
+Mon travail consiste à réaliser une application serveur/clients en C pour le lancement d’un test/QUIZ aux clients connectés. La réalisation du projet sera en versions détaillées pour mieux structurer la démarche suivie. Ensuite, une autre application Android sera réalisée qui aura la même solution afin de comparer entre les deux langages. 
+
+La démarche utilisée se base sur le verssioning afin de proposer une application opérationnelle, modifiable pour les autres applications (communication entre les robots)  et un support chronologique   pédagogique pour les étudiants de l’ENSIAS afin de maitriser la programmation système et réseau avec deux environnements distincts. 
+
+Cette application permettra non seulement de mieux contrôler le déroulement des tests et des examens afin de déterminer le niveau de chaque étudiant très précisément, mais aussi de gérer la liste des étudiants qu’un professeur prend en charge. Elle facilitera aussi l’accès aux résultats de chaque étudiant par le professeur qui seront appelés des scores et de les vérifier.  
+ 
