--- a/src/posts/2020/05/i-have-a-portfolio-now.mdx
+++ b/src/posts/2020/05/i-have-a-portfolio-now.mdx
@@ -1,33 +1,44 @@
 ---
-title: I have a Portfolio now 👨‍💻🎉
-tags: ['announcement', 'gatsby', 'webdev', 'career']
-date: 2020-05-31
+title: MAScIR (Moroccan foundation for Advanced Science, Innovation and Research) 
+tags: ['Svelte.js', 'smelte.js', 'flutter', 'loopback 4 ','node.js', 'LoRa']
+date: 2020-02-03 
 ---
-Hey Everyone, I'm very thrilled to announce that the first version of my portfolio website is ready for everyone to see! ~~Check it out at [https://amorpheuz.github.io/](https://amorpheuz.github.io/).~~ Looks like you made it here! 😋
 
-![Donald Duck getting excited on viewing my portfolio](https://media.giphy.com/media/MWYbIyPpTXYVa/giphy.gif)
+## Sujet 
 
-I am originally a front-end developer, who has been polishing his React and Gatsby Skills throughout the past year. But my current pursues of Data Science academically ended up hampering my progress where I couldn't find time for projects. At the start of the worldwide lockdown situation, I was determined to get at least a couple of projects completed during my time at home. The first one of those finalized was my Portfolio Website.
+Conception et réalisation d’une solution de monitoring et gestion des ruches 
 
-Throughout 2020, I started coming across more and more blog posts that emphasized Blog Post Syndication. And you know what, they sold the idea to me! I started researching various things from other dev portfolios/blogs to design systems for it. The recent [Blogging for Devs](https://bloggingfordevs.com/) by [@monicalent](https://twitter.com/monicalent) acted as a reaffirmation of my plan. 
+## Problématique
 
-I found the [Terminal](https://gatsby-theme-terminal.netlify.app/) theme by [@PaulieScanlon](https://twitter.com/PaulieScanlon/) to be the perfect foundation for my plan and started working on the idea. Many developers go with building their portfolio from scratch. I felt it would be better to start with a solid base/starter rather than starting from nothing. It thereby highlights my ability to integrate with others with my custom touches to the base. What I envisioned was a website that gave the visitor a feel of editing his development environment, basically their virtual home. [My portfolio](https://amorpheuz.github.io/) is the initial interpretation of the plan!
+Pour un élevage idéal des abeilles, les ruches doivent être placées dans des conditions spécifiques de température et d’humidité. Une température trop basse ou élevée peut nuir à la colonie et impacter les récoltes. L’humidité est source de mycose chez les abeilles donc doit être suivie. 
+Il est donc apparent que l’apiculture exige un suivi permanent des ruches. Pour cela des opérateurs doivent effectuer des contrôles, déplacer les ruches au besoin, etc. Un problème qui survient est qu’on observe des fraudes de leur part. Certains n’hésitent pas à retirer quelques cadres des ruches, en prélever du miel au détriment de l’entreprise. 
+Ainsi dans le but de maximiser les récoltes tout en minimisant les pertes,  on se demande comment monitorer activement les ruches tout en se donnant les moyens d’identifier les fraudes.
 
-As you might have noticed already, I feel developing a portfolio is a continuous process. The milestone I have reached feels a great stable before moving ahead, and thus I have decided to showcase it to get some feedback! Please do leave your feedback in the comments. 😀 
+## Objectif du projet
 
-Before closing out, I would like to post a mix of my long and short term plans on what's next for my blog! 
+L’application doit permettre:
 
-<Image src='https://media.giphy.com/media/YLHwkqayc1j7a/giphy.gif' alt='Jafar unfurling a long list of items to the king, like I am to you'/>
++ A l'Administrateur de:
 
-- Enable Canonical URLs after obtaining a custom domain.
-- Start with syndication from my next blog post (Coming soon 😉).
-- Develop custom components for third party content like DEV does with its liquid tags.
-- Improve SEO with further research.
-- Add support for the Hindi Language on the website, improve accessibility.
-- Customize layouts and GraphQL queries to fetch more custom data.
-- Add comments & interactivity to the website via serverless architecture.
-- Integrate Projects & activity with GitHub API.
+Créer des comptes et affecter des rôles
+Supprimer des comptes
+Faire tout ce que le gestionnaire a le droit de faire
 
-Follow me on Twitter at [@Amorpheuz](https://twitter.com/Amorpheuz) to catch up on my progress! Once again, thank you to [@PaulieScanlon](https://twitter.com/PaulieScanlon/) for providing such an awesome theme. I am looking forward to what you folks have to say about it!
++ Au Gestionnaire de: 
 
-*P.S. Here's a [link to the Heart](https://drive.google.com/open?id=1sSeiLPdNX7hlP8-hpZWnKIInkDCWMBwX) in the footer to use, as thank you for making this far. Open with your favorite text editor and change the `fill` values to modify its colors!*
+Connaître la température, le poids, l’humidité et la position de chaque ruche et autres informations notamment les cadres qui la constitue
+Accéder aux informations d’une ruche en scannant son tag RFID via NFC
+Organiser les ruches en ruchers et désigner une ruche mère
+Connaître l’historique de la température, du poids et de l’humidité de chacune des ruches sous forme de graphes
+Exporter l’historique des mesures du mois, semaine ou jour sous format pdf ou csv
+Avoir une carte présentant les ruchers et ruches
+Obtenir l’itinéraire menant à une ruche donné
+Affecter un noeud lora spécifique à une certaine ruche
+Recevoir des alertes dès qu’un des paramètres suivis connaît une brusque variation ou sort de l’intervalle recommandé
+Prédire et détecter les miellées 
+Affecter un ordre de mission à un opérateur pour indiquer qu’il doit déplacer des ruches et suivre sa réalisation
+
++ A l’Opérateur de:
+
+Recevoir des ordres de missions
+Effectuer un déplacement en scannant les positions de départ et d’arrivée
